--- a/sass/foundation/_common.scss
+++ b/sass/foundation/_common.scss
@@ -65,7 +65,8 @@ a {
 }
 
 .l-section__inner.p-top-about__inner ,
-.l-section__inner.p-top-message__inner {
+.l-section__inner.p-top-message__inner,
+.p-company__inner{
   --_width: #{rem(1920)};
   --_inner: 0;
 }
