--- a/sass/object/component/_c-button.scss
+++ b/sass/object/component/_c-button.scss
@@ -48,3 +48,34 @@
 .c-button a:hover::after{
     background-color: var(--white);
 }
+
+
+
+
+//title
+
+.c-subtitle-group {
+    width: rem(224);
+}
+
+.c-subtitle {
+font-size: rem(32);
+font-family: 'sippori-mincho', serif;
+}
+
+.c-subtitle-en {
+color: var(--red);
+margin-top: rem(20);
+}
+
+.c-subtitle-en::before{
+content: "";
+display: inline-block;
+width: rem(40);
+height: 1px;
+background-color: var(--red);
+margin-right: rem(20);
+position: relative;
+top: rem(-5);
+margin-top: rem(20);
+}
