--- a/sass/object/project/_p-top-contact.scss
+++ b/sass/object/project/_p-top-contact.scss
@@ -2,23 +2,19 @@
 
 .p-top-contact {
     background-color: var(--red);
-    background-image: url("../../../images/bg-contact.png");
-    background-repeat: no-repeat;
-    background-size: rem(880);
-    background-position: 80% 100%;
-    padding-top: rem(80);
+    padding-top: rem(100);
     padding-bottom: rem(80);
     color: var(--white);
 }
 
 .p-top-contact__inner {
-    max-width: rem(783);
+    max-width: rem(904);
     width: 100%;
     margin-inline: auto;
 }
 
-.p-top-contact__text :not(:first-child) {
-    margin-top: rem(20);
+.p-top-contact__text {
+    margin-top: rem(26);
 }
 
 .p-top-contact__title {
@@ -72,4 +68,16 @@
 
 .p-top-contact__button a {
     color: var(--black);
+}
+
+.p-top-contact__bg-image {
+    aspect-ratio: 1059 / 250;
+    max-width: rem(1059);
+    position: absolute;
+top: rem(400);
+padding-left: rem(100);
+}
+
+.p-top-contact__bg-image img {
+    height: auto;
 }
