--- a/sass/object/project/_p-top-message.scss
+++ b/sass/object/project/_p-top-message.scss
@@ -31,6 +31,7 @@
     right: 0;
     width: rem(965);
     padding: rem(40) rem(170) rem(11) rem(40);
+    line-height: normal;
 }
 
 .p-top-message__button {
