--- a/sass/foundation/_common.scss
+++ b/sass/foundation/_common.scss
@@ -17,8 +17,8 @@
 html {
   font-size: 16px;
 
-  @include MidTab{
-    font-size: calc( 1060 / 1400 * 1vw);
+  @include MidTab {
+    // font-size: calc( 1060 / 1400 * 1vw);
   }
 
   @include OverTab {
@@ -64,13 +64,15 @@ a {
   }
 }
 
-.l-section__inner.p-top-about__inner ,
+.l-section__inner.p-top-about__inner,
 .l-section__inner.p-top-message__inner,
-.l-section__inner.p-company__inner,
-.l-section__inner.p-point__inner {
+.l-section__inner.p-company__inner {
   --_width: #{rem(1920)};
   --_inner: 0;
 }
+
+
+
 
 
 
