--- a/sass/object/project/_p-point.scss
+++ b/sass/object/project/_p-point.scss
@@ -1,81 +1,191 @@
 @use "../../global" as *;
 
 .p-point {
-    // padding-top: rem(161);
-    padding-bottom: rem(159.71);
+    padding-bottom: rem(80);
+
+    @include MidTab {
+        padding-bottom: rem(159.71);
+    }
 }
 
 .p-point__inner {
+    width: min(100%, rem(375));
+    margin-inline: auto;
+    padding-inline: --_inner;
     position: relative;
+
+    @include MidTab {
+        width: min(100%, rem(768));
+    }
+
+    @include OverTab {
+        width: min(100%, rem(1400));
+        padding: 0;
+        margin-inline: auto;
+    }
 }
 
 .p-point__figure-1 {
     aspect-ratio: 650/455.379;
-    max-width: rem(650);
+    max-width: rem(343);
+
+    @include MidTab {
+        max-width: rem(650);
+    }
 }
 
 .p-point__figure-1 img {
+    border-radius: rem(30) 0px rem(30) 0px;
     height: auto;
 }
 
 .p-point__figure-2 {
     aspect-ratio: 375/501.518;
-    max-width: rem(375);
+    max-width: rem(149);
     position: absolute;
-    top: rem(99);
-    left: rem(854);
+    top: rem(283);
+    left: rem(211);
+
+    @include MidTab {
+        max-width: rem(375);
+        top: rem(520);
+        left: rem(386);
+    }
+
+    @include OverTab {
+        top: rem(99);
+        left: rem(854);
+    }
 }
 
 .p-point__figure-2 img {
+    border-radius: rem(30) 0px rem(30) 0px;
     height: auto;
 }
 
 .p-point__figure-3 {
     aspect-ratio: 369/258.783;
-    max-width: rem(369);
+    max-width: rem(174);
     position: absolute;
-    top: rem(704);
-    left: rem(702);
+    top: rem(360);
+    left: rem(15);
+
+    @include MidTab {
+        max-width: rem(369);
+        top: rem(762);
+        left: rem(15);
+    }
+
+    @include OverTab {
+        top: rem(704);
+        left: rem(702);
+    }
 }
 
 .p-point__figure-3 img {
+    border-radius: rem(30) 0px rem(30) 0px;
     height: auto;
 }
 
 .p-point__text-group {
-    width: rem(489);
-    padding-top: rem(91);
-    margin-left: rem(170);
+    padding-top: rem(320);
+
+    @include MidTab {
+        padding-top: rem(670);
+    }
+
+    @include OverTab {
+        width: rem(489);
+        padding-top: rem(83);
+        margin-left: rem(170);
+    }
 }
 
+.p-point__subtitle {
+    font-family: "Shippori Mincho";
+    font-size: rem(24);
+    line-height: normal;
 
-// .p-point__subtitle-group {
-// }
+    @include MidTab {
+        font-size: rem(32);
+    }
+}
 
-// .p-point__subtitle {
+.p-point__subtitle-en {
+    font-family: 'Lora', serif;
+    font-size: rem(13);
+    margin-top: rem(5);
 
-// }
-
-// .p-point__subtitle-en {
-
-// }
+    @include MidTab {
+        margin-top: rem(10);
+    }
+}
 
 .p-point__text {
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 400;
     line-height: calc(29/16);
     padding-top: rem(40);
+
+    @include MidTab {
+        line-height: 189%;
+    }
 }
 
 .p-point__button {
-    padding-top: rem(228);
+    padding-top: rem(80);
     display: flex;
     justify-content: center;
+
+    @include OverTab {
+        padding-top: rem(228);
+    }
+}
+
+.c-button.p-point__button a::before {
+    content: "";
+    display: inline-block;
+    width: 1px;
+    height: rem(8);
+    background-color: var(--black);
+    rotate: -45deg;
+    position: absolute;
+    top: rem(27);
+    left: rem(22);
+}
+
+.c-button a:hover::before {
+    background-color: var(--white);
+}
+
+.c-button.p-point__button a::after {
+    content: "";
+    display: inline-block;
+    width: 1px;
+    height: rem(8);
+    background-color: var(--black);
+    rotate: 45deg;
+    position: absolute;
+    top: rem(22);
+    left: rem(22);
+}
+
+.c-button a:hover::after {
+    background-color: var(--white);
 }
 
 .p-point__line {
-    width: rem(800);
-    margin-inline: auto;
     border-bottom: 1px solid var(--black);
-    margin-top: rem(159.71);
+    width: rem(343);
+    padding-top: rem(80);
+    margin-inline: auto;
+
+    @include MidTab {
+        width: rem(700);
+    }
+
+    @include OverTab {
+        width: rem(800);
+        padding-top: rem(159.71);
+    }
 }
