--- a/sass/object/project/_p-top-contact.scss
+++ b/sass/object/project/_p-top-contact.scss
@@ -2,15 +2,32 @@
 
 .p-top-contact {
     background-color: var(--red);
-    padding-top: rem(100);
-    padding-bottom: rem(80);
+    padding-top: rem(41);
+    padding-bottom: rem(40);
     color: var(--white);
+    line-height: normal;
+
+    @include MidTab {
+        padding-top: rem(81);
+        padding-bottom: rem(80);
+    }
 }
 
 .p-top-contact__inner {
     max-width: rem(904);
     width: 100%;
     margin-inline: auto;
+
+    @include OverTab {}
+}
+
+.p-top-contact__title-group {
+    width: rem(343);
+    margin-inline: auto;
+
+    @include LargeTab {
+        width: rem(510);
+    }
 }
 
 .p-top-contact__text {
@@ -18,27 +35,50 @@
 }
 
 .p-top-contact__title {
-    font-size: rem(32);
+    font-size: rem(24);
     font-family: 'sippori-mincho', serif;
     font-weight: bold;
     text-align: center;
+
+    @include MidTab {
+        font-size: rem(32);
+    }
 }
 
 .p-top-contact__description {
-    width: rem(510);
-    margin-inline: auto;
     margin-top: rem(40);
     line-height: normal;
+
+    @include MidTab {
+        margin-top: rem(34);
+        width: 100%;
+    }
 }
 
 .p-top-contact__items {
     display: flex;
-    justify-content: space-between;
-    margin-top: rem(40);
+    flex-direction: column;
+
+    @include MidTab {
+        width: rem(670);
+        flex-direction: row;
+        justify-content: space-between;
+        line-height: 0.9;
+        margin-inline: auto;
+    }
+
+    @include LargeTab {
+        width: rem(782);
+    }
 }
 
 .p-top-contact__item {
     text-align: center;
+    margin-top: rem(48);
+
+    @include MidTab {
+        margin-top: rem(40);
+    }
 }
 
 .p-top-contact__tel {
@@ -47,11 +87,17 @@
     font-family: 'noto-sans-jp', sans-serif;
     font-weight: bold;
     text-align: center;
-    margin-top: rem(20);
+    letter-spacing: rem(-2);
+    margin-top: rem(20.05);
+
+    @include MidTab {
+        margin-top: rem(40);
+        letter-spacing: rem(-4);
+    }
 }
 
 .p-top-contact__icon {
-    aspect-ratio: 100/100;
+    aspect-ratio: 100/102;
     max-width: rem(100);
     margin-inline: auto;
 }
@@ -61,9 +107,13 @@
 }
 
 .p-top-contact__button {
+    width: rem(240);
     background-color: var(--white);
     border-radius: rem(20) 0px rem(20) 0px;
     margin-top: rem(20);
+    margin-inline: auto;
+
+    @include MidTab {}
 }
 
 .p-top-contact__button a {
@@ -72,10 +122,33 @@
 
 .p-top-contact__bg-image {
     aspect-ratio: 1059 / 250;
-    max-width: rem(1059);
+    max-width: rem(353);
+    width: 100%;
     position: absolute;
-top: rem(400);
-padding-left: rem(100);
+    top: rem(798);
+    left: 50%;
+    transform: translateX(-50%);
+    padding-left: rem(10);
+
+    @include MidTab {
+        max-width: rem(650);
+        top: rem(529);
+        padding-left: rem(100);
+    }
+
+    @include LargeTab {
+        aspect-ratio: 959 / 180;
+        max-width: rem(1024);
+        width: 100%;
+        top: rem(463);
+        padding-left: rem(360);
+    }
+
+    @media screen and (min-width:1400px) {
+        max-width: rem(1400);
+        top: rem(400);
+        padding-left: rem(354);
+    }
 }
 
 .p-top-contact__bg-image img {
