--- a/sass/foundation/_common.scss
+++ b/sass/foundation/_common.scss
@@ -18,7 +18,7 @@ html {
   font-size: 16px;
 
   @include MidTab {
-    // font-size: calc( 1060 / 1400 * 1vw);
+    font-size: calc( 1060 / 1400 * 1vw);
   }
 
   @include OverTab {
@@ -65,8 +65,7 @@ a {
 }
 
 .l-section__inner.p-top-about__inner,
-.l-section__inner.p-top-message__inner,
-.l-section__inner.p-company__inner {
+.l-section__inner.p-top-message__inner{
   --_width: #{rem(1920)};
   --_inner: 0;
 }
