--- a/sass/object/project/_p-company.scss
+++ b/sass/object/project/_p-company.scss
@@ -1,87 +1,195 @@
 @use "../../global" as *;
 
 .p-company {
+    // width: rem(375);
+    margin-inline: auto;
+    padding-top: rem(99);
     padding-bottom: rem(101);
+    
+    @include MidTab {
+        width: min(100%, rem(1400));
+     
+}
+}
+
+.p-company__inner {
+
+    position: relative;
+    margin-inline: auto;
+
+    @include MidTab {
+        width: min(100%, rem(1400));
+        padding-inline: 0;
+
+    }
 }
 
 .p-company__heading {
-display: flex;
-gap: rem(80);
+    display: flex;
+    flex-direction: column;
+
+    @include MidTab {
+        // width: rem(1400);
+        flex-direction: row;
+        align-items: flex-end;
+    }
 }
 
 .p-company__heading-image {
-aspect-ratio: 742 / 331;
-max-width: rem(742);
+    aspect-ratio: 742 / 331;
+    max-width: rem(742);
 }
 
-.p-company__heading-image img{
-height: 100%;
+.p-company__heading-image img {
+    height: 100%;
 }
 
 .p-company__title-group {
-padding-top: rem(234);
+    // padding-top: rem(234);
+    padding-top: rem(27);
+
+    @include MidTab {
+        width: rem(573);
+
+        margin-left: rem(80);
+
+    }
 }
 
 .p-company__title-en {
-color: var(--red);
-font-family:'Lora', serif;
-text-transform: capitalize;
+    font-size: rem(13);
+    color: var(--red);
+    font-family: 'Lora', serif;
+    text-transform: capitalize;
+
+    @include MidTab {
+        font-size: rem(16);
+    }
 }
 
 .p-company__title {
     font-family: 'sippori-mincho', serif;
-font-size: rem(40);
-padding-top: rem(22);
+    width: rem(96);
+    font-size: rem(24);
+    padding-top: rem(5);
+    padding-bottom: rem(5);
+    border-bottom: 1px solid var(--black);
+
+    @include MidTab {
+        width: rem(160);
+        font-size: rem(40);
+        padding-top: rem(22);
+        padding-bottom: rem(10);
+    }
 }
 
-.p-company__title::after{
-    content: "";
-    display: block;
-    width: rem(160);
-    height: 1px;
-    background-color: var(--black);
-    margin-top: rem(20);
-}
+// .p-company__title::after {
+//     content: "";
+//     display: block;
+//     width: rem(160);
+//     height: 1px;
+//     background-color: var(--black);
+//     margin-top: rem(20);
+// }
 
 .p-company__description {
-    font-size: rem(24);
+    // width: rem(343);
+    font-family: "Shippori Mincho";
+    font-size: rem(16);
+    line-height: rem(32);
     margin-inline: auto;
+    margin-top: rem(85);
     text-align: center;
-    margin-top: rem(199.48);
-line-height: calc(50/24);
+
+    @include MidTab {
+        width: rem(816);
+        font-size: rem(24);
+        margin-top: rem(199.48);
+        line-height: calc(50/24);
+
+    }
 }
 
 .p-company__subtitle-group {
-//     width: rem(224);
-margin-top: rem(313.18);
-margin-left: rem(170);
+    //     width: rem(224);
+    margin-top: rem(-138);
 }
 
-.p-company__message-group{
-position: relative;
+.p-company__subtitle {
+    line-height: normal;
+    font-size: rem(24);
+
+    @include MidTab {
+
+
+        font-weight: 700;
+        font-size: rem(32);
+    }
 }
 
-.p-company__message-image {
-aspect-ratio: 650 / 402.73;
-max-width: rem(650);
-position: absolute;
-top:-54%;
-right: 0;
+.p-company__message-group {
+    margin-top: rem(176);
+
+    background-image: url("../../../images/company-2.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: top right;
+    padding-top: rem(30);
+    
+    @include MidTab {
+        
+        background-size: rem(650);
+        padding-top: rem(144);
+        margin-left: rem(170);
+        margin-top: rem(159);
+    }
 }
 
-.p-company__message-image img{
-height: 100%;
-}
+// .p-company__message-image {
+//     aspect-ratio: 650 / 402.73;
+//     // max-width: rem(343);
+//     // position: absolute;
+//     // top: 37%;
+//     // left: 0;
+//     // padding-inline: rem(15);
+//     margin-inline: auto;
+    
+    
+//     @include MidTab {
+//         max-width: rem(650);
+//         // top: 50%;
+//         // left: 54%
+// margin-top: rem(-250);
+// margin-left: rem(580);
+//     }
+// }
+
+// .p-company__message-image img {
+//     height: 100%;
+//     object-fit: contain;
+// }
 
 .p-company__message {
-    width: rem(746);
-margin-top: rem(50.53);
-margin-left: rem(170);
-line-height: 1.95;
-z-index: 1;
-position: relative;
+    // max-width: rem(339);
+    width: 100%;
+    margin-inline: auto;
+    padding-top: rem(292);
+    line-height: 1.85;
+    z-index: 1;
+    position: relative;
+
+    @include MidTab {
+        width: rem(746);
+        padding-top: rem(50.53);
+        margin-inline: 0;
+    }
 }
 
+.p-company__message-name {
+    text-align: end;
+    display: block;
 
-
-
+    @include MidTab {
+        text-align: start;
+    }
+}
